# perplexity-cli-python

./: .env.example  .gitignore  README.md  pyproject.toml
src/perplexity_cli/: __init__.py  __main__.py  cli.py  client.py  security.py
tests/: test_cli.py  test_client.py  test_security.py
