[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "perplexity-cli-python"
version = "0.1.0"
description = "A secure, dependency-free CLI for the Perplexity Sonar API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[project.scripts]
pplx-python = "perplexity_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
